--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ pool:
 steps:
 - task: Gradle@2
   inputs:
-    workingDirectory: '/ABVCatalogApp/*'
+    workingDirectory: '/ABVCatalogApp/'
     gradleWrapperFile: 'gradlew'
     gradleOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
