--- a/azure-pipelines-CI.yml
+++ b/azure-pipelines-CI.yml
@@ -12,8 +12,8 @@ pool:
 steps:
 - task: Gradle@2
   inputs:
-    workingDirectory: '$(Build.SourcesDirectory)/ABVCatalogApp/gradlew'
-    gradleWrapperFile: 'gradlew'
+    workingDirectory: ''
+    gradleWrapperFile: '$(Build.SourcesDirectory)/ABVCatalogApp/gradlew'
     gradleOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
