--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,8 +17,8 @@ pool:
 steps:
 - task: Gradle@2
   inputs:
-    workingDirectory: '/ABVCatalogApp/'
-    gradleWrapperFile: 'gradlew'
+    workingDirectory: ''
+    gradleWrapperFile: '$(Build.SourcesDirectory)/ABVCatalogApp/gradlew'
     gradleOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
