Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,9 @@ steps:
     tasks: 'build --refresh-dependencies'
   displayName: gradlew assemble
 
+- script: echo $(Agent.BuildDirectory)
+  displayName: 'Run a one-line script'
+
 - task: CopyFiles@2
   inputs:
     SourceFolder: '$(Agent.BuildDirectory)/ABVCatalogApp/app/build/outputs'
