Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,9 +7,6 @@ trigger:
   branches:
     include:
       - development
-  paths:
-    include:
-      - /ABVCatalogApp/*
       
 pool:
   vmImage: macOS-latest
@@ -20,10 +17,7 @@ steps:
     workingDirectory: ''
     gradleWrapperFile: '$(Build.SourcesDirectory)/ABVCatalogApp/gradlew'
     gradleOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    jdkArchitectureOption: 'x64'
-    publishJUnitResults: true
+    publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'assembleDebug'
   displayName: gradlew assemble
