--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
     gradleOptions: '-Xmx3072m'
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
-    tasks: 'assembleDebug'
+    tasks: 'build --refresh-dependencies'
   displayName: gradlew assemble
 
 - script: echo $(Agent.BuildDirectory)
@@ -27,6 +27,7 @@ steps:
 
 - task: CopyFiles@2
   inputs:
+    SourceFolder: '$(system.defaultworkingdirectory)/ABVCatalogApp/app/build/outputs'
     contents: '**/*.apk'
     targetFolder: '$(build.artifactStagingDirectory)/drop'
   displayName: Copy .apk files to artifact staging directory
