--- a/BeerRestAPI/Infrastructure/azure-pipelines.yml
+++ b/BeerRestAPI/Infrastructure/azure-pipelines.yml
@@ -8,6 +8,24 @@ trigger:
     include:
       - development
       
+variables:
+  - group: ReleaseVersionNumber
+  - group: BuildNumberPropertyName
+  - group: JiraVersioningDetails
+  - group: AzureKeys
+  - group: Enterprise Tools
+  - name: Major
+    value: 4
+  - name: Minor
+    value: 0
+  - name: Hotfix
+    value: 0
+  - name: BuildPlatform
+    value: 'Any CPU'
+  - name: BuildConfiguration
+    value: 'Release'
+
+
 pool:
   vmImage: windows-latest
 
@@ -25,12 +43,12 @@ steps:
   inputs:
     solution: $(System.DefaultWorkingDirectory)\BeerRestAPI\BeerRestAPI.sln
     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    platform: '$(BuildPlatform)'
+    configuration: '$(BuildConfiguration)'
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: $(System.DefaultWorkingDirectory)\BeerRestAPI\bin\Release\netcoreapp3.1
+    rootFolderOrFile: $(System.DefaultWorkingDirectory)\BeerRestAPI\bin\$(BuildConfiguration)\netcoreapp3.1
     archiveType: 'zip'
     includeRootFolder: false
     archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildNumber).zip
