--- a/BeerRestAPI/Infrastructure/azure-pipelines.yml
+++ b/BeerRestAPI/Infrastructure/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
-    restoreSolution: '$(solution)'
+    restoreSolution: '$(System.DefaultWorkingDirectory)\BeerRestAPI\*.sln'
 
 - task: DotNetCoreCLI@2
   inputs:
