--- a/BeerRestAPI/Infrastructure/azure-pipelines.yml
+++ b/BeerRestAPI/Infrastructure/azure-pipelines.yml
@@ -12,10 +12,21 @@ pool:
   vmImage: windows-latest
 
 steps:
+- task: UseDotNet@2
+  displayName: 'Use dotnet sdk 3.1.x'
+  inputs:
+    version: 3.1.x
+
 - task: NuGetToolInstaller@1
   displayName: 'Use NuGet 4.4.1'
   inputs:
     versionSpec: 4.4.1
+- task: DotNetCoreCLI@2
+  displayName: dotnet restore
+  inputs:
+    command: restore
+    projects: 'acl/**/*.csproj'
+    includeNuGetOrg: true
 
 - task: NuGetCommand@2
   inputs:
