--- a/BeerRestAPI/Infrastructure/azure-pipelines.yml
+++ b/BeerRestAPI/Infrastructure/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
   displayName: dotnet restore
   inputs:
     command: restore
-    projects: 'acl/**/*.csproj'
+    projects: '$(System.DefaultWorkingDirectory)/**/*.csproj'
     includeNuGetOrg: true
 
 - task: NuGetCommand@2
