--- a/ABVCatalogApp/build.gradle
+++ b/ABVCatalogApp/build.gradle
@@ -1,7 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
-    repositories {
+    
+	ext{
+		threetenabp_version = '1.2.0'
+	}
+	
+	repositories {
         google()
         jcenter()
     }
