--- a/ABVCatalogApp/build.gradle
+++ b/ABVCatalogApp/build.gradle
@@ -1,27 +1,74 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
-    ext.kotlin_version = "1.3.72"
-    
-	ext{
-		threetenabp_version = '1.2.0'
-	}
-	
-	repositories {
+
+    ext {
+        android = [
+                minSdkVersion    : 24,
+                compileSdkVersion: 29,
+                targetSdkVersion : 29,
+                buildToolsVersion : '29.0.2'
+        ]
+        kotlin_version = '1.4.21'
+        java_version = JavaVersion.VERSION_1_8
+        timber_version = '4.7.1'
+        junit_version = '4.13'
+        junit5_version = '5.6.2'
+        room_version = '2.2.5'
+        coroutines_version = '1.4.2'
+        apollo_version = '2.4.0'
+        test_runner_version = '1.1.2'
+        espresso_core_version = '3.3.0'
+        appcompat_version = '1.2.0'
+        threetenabp_version = '1.2.0'
+        mockito_version = '3.2.0'
+        nhaarman_mockito_version = '2.2.0'
+        dexmaker_mockito_inline = '2.28.0'
+        okhttp_version = '4.5.0'
+        android_material_version = '1.2.1'
+        constraint_layout_version = '2.0.2'
+        retrofit_version = '2.6.2'
+        androidx_activity_version = '1.1.0'
+        androidx_fragment_version = '1.2.5'
+        firebase_analaytics = '17.6.0'
+        firebase_crashlytics = '17.2.2'
+        lifecycle_version = '2.2.0'
+        jacoco_version = '0.8.5'
+        gson_version = '2.8.6'
+        coil_version = '1.0.0'
+        kluent_version = '1.61'
+        mockk_version = '1.10.0'
+    }
+
+    repositories {
         google()
         jcenter()
+        mavenCentral()
     }
+
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.apollographql.apollo:apollo-gradle-plugin:$apollo_version"
+        classpath "org.jacoco:org.jacoco.core:$jacoco_version"
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.1'
+        classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'de.mannodermaus.gradle.plugins:android-junit5:1.6.2.0'
+        // Add the Firebase Crashlytics Gradle plugin.
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
+        classpath 'com.google.firebase:perf-plugin:1.3.4'  // Performance Monitoring plugin
+        classpath "io.realm:realm-gradle-plugin:10.4.0"
     }
 }
+
+apply from: 'jacoco.gradle'
 
 allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
