--- a/ABVCatalogApp/build.gradle
+++ b/ABVCatalogApp/build.gradle
@@ -4,13 +4,17 @@ buildscript {
 
     ext {
         android = [
-                minSdkVersion    : 24,
+                minSdkVersion    : 27,
                 compileSdkVersion: 29,
                 targetSdkVersion : 29,
                 buildToolsVersion : '29.0.2'
         ]
         kotlin_version = '1.4.21'
+        archLifecycleVersion = '1.1.1'
+        navigationVersion = '1.0.0'
+        gradleVersion = '4.0.1'
         java_version = JavaVersion.VERSION_1_8
+        dataBindingCompilerVersion = gradleVersion // Always need to be the same.
         timber_version = '4.7.1'
         junit_version = '4.13'
         junit5_version = '5.6.2'
@@ -47,17 +51,12 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.apollographql.apollo:apollo-gradle-plugin:$apollo_version"
-        classpath "org.jacoco:org.jacoco.core:$jacoco_version"
-        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.1'
-        classpath 'com.google.gms:google-services:4.3.4'
-        classpath 'de.mannodermaus.gradle.plugins:android-junit5:1.6.2.0'
-        // Add the Firebase Crashlytics Gradle plugin.
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
-        classpath 'com.google.firebase:perf-plugin:1.3.4'  // Performance Monitoring plugin
-        classpath "io.realm:realm-gradle-plugin:10.4.0"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
